--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ body {
     height: 100vh;
 }
 
+.d-none{
+    display: none !important;
+}
 .quiz-card {
     width: 30rem !important;
 }
@@ -37,6 +40,16 @@ body {
 
 .bgwhite {
     background-color: white !important;
+}
+
+
+.startscreen{
+    display: flex;
+    flex-direction: column;
+}
+
+.startscreen button{
+    margin: 8px;
 }
 
 .endscreen {
